--- a/letsflex/flexbox.html
+++ b/letsflex/flexbox.html
@@ -9,5 +9,20 @@
 </head>
 <body>
     
+    <div class="container">
+        <div class="level1"></div>
+        <div class="level1">
+            <div class="level2"></div>
+            <div class="level2"></div>
+    </div>
+    </div>
+    <div class="container">
+        <div class="level1"></div>
+        <div class="level1" style="flex-direction:row ;">
+        <div class="level2"></div>
+        <div class="level2"></div>
+        </div>
+        <div class="level1"></div>
+    </div>
 </body>
 </html>
