--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="../CssFlex/letsflex/flexbox.html">Flexbox</a>
     <a href="../CssFlex/letsflex/float.html">Float</a>
     <a href="../CssFlex/letsflex/newflex.html">New Flex</a>
+    <a href="../CssFlex/advance-positioning/schemes.html">Advance Positioning</a>
 </body>
 </html>
