--- a/advance-positioning/menu.html
+++ b/advance-positioning/menu.html
@@ -12,7 +12,14 @@
         <div class="logo"><img src="./images/awesome-logo.svg" alt="logo"/></div>
         <ul class="menu">
             <!-- ul should be used for navigations menu helps Dearch engine -->
-            <li class="dropdown"><span>Features</span></li>
+            <li class="dropdown"><span>Features &#9662</span>
+                <ul class="features-menu">
+                    <li><a href="#">Harder</a></li>
+                    <li><a href="#">Better</a></li>
+                    <li><a href="#">Faster</a></li>
+                    <li><a href="#">Stronger</a></li>
+                </ul>
+            </li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Subscribe</a></li>
             <li><a href="#">About</a></li>
