Added new Menu based on Position and in index

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="../CssFlex/letsflex/float.html">Float</a>
     <a href="../CssFlex/letsflex/newflex.html">New Flex</a>
     <a href="../CssFlex/advance-positioning/schemes.html">Advance Positioning</a>
+    <a href="../CssFlex/advance-positioning/menu.html">Positioning</a>
 </body>
 </html>
